    * The definition of the ioctl method in the Sys::Ioctl class is changed.
      [Before]
      static method ioctl : int ($fd : int, $request : int, $request_arg = undef : object of Byte|Short|Int|Long|Float|Double|object);
      [After]
      static method ioctl : int ($fd : int, $request : int, $request_arg_ref = undef : object of byte[]|short[]|int[]|long[]|float[]|double[]|object);

0.481 2023-05-08
  [New Features]
    * The version string can be got.
  [Changes]
    * The implementation logic of the ioctl method in the Sys::Ioclt class got to be the one on Linux.
0.48 2023-04-07
  [New Features and Incompatible Changes]
    * Added the Sys::Time::Tm class.
    * Added the following methods in Sys::Time class.
    
      static method time : long ();
      static method localtime : Sys::Time::Tm ($time : long);
      static method gmtime : Sys::Time::Tm ($time : long);
    * Use the Sys::Time::Tm class instead of the Time class in all place.
0.47 2023-04-06
  [License Change]
    * The license is changed to MIT License.
  [Prerequirement Change]
    * SPVM 0.9701 is required.
0.46 2023-03-31
  [Internal Compatible Changes]
    * Use new_pointer_ojbect_by_name instead of the deprecated new_pointer_by_name Native API.
0.45  2022-06-21
  [Internal Compatible Changes]
    * Use SPVM::ExchangeAPI method instead of SPVM functions.
0.44 2022-03-16
  [Test Fix]
    * Fixed symlink tests when some time st_atime, st_mtime, st_ctime is different in target and symbolic link.
  [Incompatible Changes]
    * Removed the following temporary resotred methods in the Sys class.
      static method getenv : string ($name : string);
      static method defined : int ($macro_name : string, $value = undef : object of Int|Long|Double);
      
0.43 2022-03-15
  [Deprecation]
    * SPVM::FileTest is deprecated. Use methods in the Sys class instead.
  [Exception Message Improvement]
    * Improve the following exception messages.
      [Before]