@@ -1334,65 +1334,12 @@ int32_t SPVM__Sys__IO__fcntl(SPVM_ENV* env, SPVM_VALUE* stack) {
       int32_t command_arg_basic_type_id = env->get_object_basic_type_id(env, stack, obj_command_arg);
       int32_t command_arg_type_dimension = env->get_object_type_dimension(env, stack, obj_command_arg);
       
-      // Byte
-      if (command_arg_basic_type_id == SPVM_NATIVE_C_BASIC_TYPE_ID_BYTE_CLASS && command_arg_type_dimension == 0) {
-        int8_t command_arg_int8 = env->get_field_byte_by_name(env, stack, obj_command_arg, "value", &e, __func__, FILE_NAME, __LINE__);
-        if (e) { return e; }
-        
-        ret = fcntl(fd, command, &command_arg_int8);
-
-        env->set_field_byte_by_name(env, stack, obj_command_arg, "value", command_arg_int8, &e, __func__, FILE_NAME, __LINE__);
-        if (e) { return e; }
-      }
-      // Short
-      else if (command_arg_basic_type_id == SPVM_NATIVE_C_BASIC_TYPE_ID_SHORT_CLASS && command_arg_type_dimension == 0) {
-        int16_t command_arg_int16 = env->get_field_short_by_name(env, stack, obj_command_arg, "value", &e, __func__, FILE_NAME, __LINE__);
-        if (e) { return e; }
-        
-        ret = fcntl(fd, command, &command_arg_int16);
-
-        env->set_field_short_by_name(env, stack, obj_command_arg, "value", command_arg_int16, &e, __func__, FILE_NAME, __LINE__);
-        if (e) { return e; }
-      }
       // Int
-      else if (command_arg_basic_type_id == SPVM_NATIVE_C_BASIC_TYPE_ID_INT_CLASS && command_arg_type_dimension == 0) {
+      if (command_arg_basic_type_id == SPVM_NATIVE_C_BASIC_TYPE_ID_INT_CLASS && command_arg_type_dimension == 0) {
         int32_t command_arg_int32 = env->get_field_int_by_name(env, stack, obj_command_arg, "value", &e, __func__, FILE_NAME, __LINE__);
         if (e) { return e; }
         
         ret = fcntl(fd, command, &command_arg_int32);
-
-        env->set_field_int_by_name(env, stack, obj_command_arg, "value", command_arg_int32, &e, __func__, FILE_NAME, __LINE__);
-        if (e) { return e; }
-      }
-      // Long
-      else if (command_arg_basic_type_id == SPVM_NATIVE_C_BASIC_TYPE_ID_LONG_CLASS && command_arg_type_dimension == 0) {
-        int64_t command_arg_int64 = env->get_field_long_by_name(env, stack, obj_command_arg, "value", &e, __func__, FILE_NAME, __LINE__);
-        if (e) { return e; }
-        
-        ret = fcntl(fd, command, &command_arg_int64);
-
-        env->set_field_long_by_name(env, stack, obj_command_arg, "value", command_arg_int64, &e, __func__, FILE_NAME, __LINE__);
-        if (e) { return e; }
-      }
-      // Float
-      else if (command_arg_basic_type_id == SPVM_NATIVE_C_BASIC_TYPE_ID_FLOAT_CLASS && command_arg_type_dimension == 0) {
-        float command_arg_float = env->get_field_float_by_name(env, stack, obj_command_arg, "value", &e, __func__, FILE_NAME, __LINE__);
-        if (e) { return e; }
-        
-        ret = fcntl(fd, command, &command_arg_float);
-
-        env->set_field_float_by_name(env, stack, obj_command_arg, "value", command_arg_float, &e, __func__, FILE_NAME, __LINE__);
-        if (e) { return e; }
-      }
-      // Double
-      else if (command_arg_basic_type_id == SPVM_NATIVE_C_BASIC_TYPE_ID_DOUBLE_CLASS && command_arg_type_dimension == 0) {
-        double command_arg_double = env->get_field_double_by_name(env, stack, obj_command_arg, "value", &e, __func__, FILE_NAME, __LINE__);
-        if (e) { return e; }
-        
-        ret = fcntl(fd, command, &command_arg_double);
-
-        env->set_field_double_by_name(env, stack, obj_command_arg, "value", command_arg_double, &e, __func__, FILE_NAME, __LINE__);
-        if (e) { return e; }
       }
       // A pointer class
       else if (env->is_pointer_class(env, stack, obj_command_arg)) {
@@ -1400,7 +1347,7 @@ int32_t SPVM__Sys__IO__fcntl(SPVM_ENV* env, SPVM_VALUE* stack) {
         ret = fcntl(fd, command, command_arg);
       }
       else {
-        return env->die(env, stack, "The $command_arg must be an Int object or the object that is a pointer class such as Sys::IO::Flock", __func__, FILE_NAME, __LINE__);
+        return env->die(env, stack, "The $command_arg must be an Int object or the object that is a pointer class", __func__, FILE_NAME, __LINE__);
       }
     }
   }
